--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@adminjs/sequelize": "~2.1.0",
     "@adminjs/upload": "~2.0.1",
     "adminjs": "~5.5.1",
+    "bcrypt": "~5.0.1",
     "express": "~4.17.2",
     "express-formidable": "~1.2.0",
     "pg": "~8.7.1",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.5",
+    "@types/bcrypt": "~5.0.0",
     "@types/express": "~4.17.13",
     "@types/node": "~17.0.10",
     "sequelize-cli": "~6.4.1",
